// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enhancers/with-remember-me withRememberMe { setRememberMe } should dispatch action 1`] = `
Array [
  Object {
    "active": true,
    "type": "REMEMBER_ME_SET",
  },
]
`;

exports[`enhancers/with-remember-me withRememberMe { setRememberMeResult } should dispatch action 1`] = `
Array [
  Object {
    "result": true,
    "type": "REMEMBER_ME_SET_RESULT",
  },
]
`;
